# nisaetus

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
nisaetus/: __init__.py  cli.py  glasses.py  live_client.py  protocol.py  wifi_transfer.py
scripts/: test_glasses.py
